[package]
name = "boundless"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.0"
glsl-layout = "*"
derivative = "*"
simdnoise = "*"
rand = "*"
lazy_static = "*"
failure = "*"

[features]
default = ["vulkan", "amethyst/tiles"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

[profile.dev]
opt-level = 3   